--- a/packages/demo/orchestrated/change-notifier/package.json
+++ b/packages/demo/orchestrated/change-notifier/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
-    "start": "node index.js"
+    "start": "node --watch index.js"
   },
   "keywords": [],
   "author": "",
