--- a/packages/demo/orchestrated/readmodel-orders/package.json
+++ b/packages/demo/orchestrated/readmodel-orders/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
-    "start": "node index.js"
+    "start": "node --watch index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +18,14 @@
     "@lazyapps/bootstrap": "workspace:^",
     "@lazyapps/change-notification-sender-fetch": "workspace:^",
     "@lazyapps/command-sender-fetch": "workspace:^",
-    "@lazyapps/eventbus-mqemitter-redis": "workspace:^",
+    "@lazyapps/eventbus-rabbitmq": "workspace:^",
     "@lazyapps/express": "workspace:^",
+    "@lazyapps/logger": "workspace:^",
     "@lazyapps/readmodels": "workspace:^",
     "@lazyapps/readmodelstorage-mongodb": "workspace:^",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.8.1",
+    "graphql-import": "^1.0.2",
     "isomorphic-fetch": "^3.0.0",
     "xml-js": "^1.6.11"
   },
