--- a/packages/millionaire/frontend/package.json
+++ b/packages/millionaire/frontend/package.json
@@ -21,7 +21,13 @@
 		"eslint-plugin-svelte": "^2.33.1",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
+		"rehype-stringify": "^10.0.0",
+		"remark-gfm": "^4.0.0",
+		"remark-parse": "^11.0.0",
+		"remark-rehype": "^11.1.0",
+		"remark-smartypants": "^2.1.0",
 		"svelte": "^4.2.0",
+		"unified": "^11.0.4",
 		"vite": "^4.4.9",
 		"vitest": "^0.34.4"
 	},
