--- a/packages/readmodelstorage-mongodb/package.json
+++ b/packages/readmodelstorage-mongodb/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "@lazyapps/logger": "workspace:^",
-    "mongodb": "^5.7.0"
+    "mongodb": "^5.7.0",
+    "p-retry": "^6.1.0"
   },
   "type": "module"
 }
