--- a/packages/demo/orchestrated/readmodel-dotnet/Dockerfile
+++ b/packages/demo/orchestrated/readmodel-dotnet/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/sdk:7.0
+FROM mcr.microsoft.com/dotnet/sdk:8.0
 
 WORKDIR /src
 
@@ -6,4 +6,4 @@ COPY . ./
 
 WORKDIR /src/packages/demo/orchestrated/readmodel-dotnet
 
-CMD dotnet run
+CMD dotnet watch run --non-interactive
