--- a/packages/millionaire/frontend/package.json
+++ b/packages/millionaire/frontend/package.json
@@ -1,45 +1,45 @@
 {
-	"name": "millionaire-frontend",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"test": "npm run test:integration && npm run test:unit",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
-		"test:integration": "playwright test",
-		"test:unit": "vitest"
-	},
-	"devDependencies": {
-		"@playwright/test": "^1.38.0",
-		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.25.0",
-		"eslint": "^8.49.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte": "^2.33.1",
-		"prettier": "^3.0.3",
-		"prettier-plugin-svelte": "^3.0.3",
-		"rehype-stringify": "^10.0.0",
-		"remark-gfm": "^4.0.0",
-		"remark-parse": "^11.0.0",
-		"remark-rehype": "^11.1.0",
-		"remark-smartypants": "^2.1.0",
-		"svelte": "^4.2.0",
-		"unified": "^11.0.4",
-		"vite": "^4.4.9",
-		"vitest": "^0.34.4"
-	},
-	"type": "module",
-	"dependencies": {
-		"autoprefixer": "^10.4.15",
-		"dayjs": "^1.11.9",
-		"lodash": "^4.17.21",
-		"nanoid": "^5.0.1",
-		"postcss": "^8.4.30",
-		"qrcode": "^1.5.3",
-		"socket.io-client": "^4.7.2",
-		"tailwindcss": "^3.3.3"
-	}
+  "name": "millionaire-frontend",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "npm run test:integration && npm run test:unit",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write .",
+    "test:integration": "playwright test",
+    "test:unit": "vitest"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.38.0",
+    "@sveltejs/adapter-node": "^4.0.1",
+    "@sveltejs/kit": "^1.25.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-svelte": "^2.33.1",
+    "prettier": "^3.0.3",
+    "prettier-plugin-svelte": "^3.0.3",
+    "rehype-stringify": "^10.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "remark-smartypants": "^2.1.0",
+    "svelte": "^4.2.0",
+    "unified": "^11.0.4",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.4"
+  },
+  "type": "module",
+  "dependencies": {
+    "autoprefixer": "^10.4.15",
+    "dayjs": "^1.11.9",
+    "lodash": "^4.17.21",
+    "nanoid": "^5.0.1",
+    "postcss": "^8.4.30",
+    "qrcode": "^1.5.3",
+    "socket.io-client": "^4.7.2",
+    "tailwindcss": "^3.3.3"
+  }
 }
