chore: migrate changes here

--- a/packages/demo/orchestrated/command-processor/Dockerfile
+++ b/packages/demo/orchestrated/command-processor/Dockerfile
@@ -14,4 +14,4 @@ WORKDIR /src/packages/demo/orchestrated/command-processor
 
 EXPOSE 80
 
-CMD ["pnpm", "start"]
+CMD ["node", "--require", "./tracing.cjs", "--watch", "index.js"]
